完善了数据库的操作
